--- a/style.css
+++ b/style.css
@@ -1,14 +1,38 @@
+@import url(http://fonts.googleapis.com/css?family=Droid+Sans);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+@import url(http://fonts.googleapis.com/css?family=Lato);
+
 body{
 	background-color: #F0F0F0;
 	font-family: "Helvetica";
 }
 
-div{
-	margin: 0 auto;
+header{
+	margin: 40px auto;
 	text-align: center;
 }
 
+h1{
+    color: #4ead77;
+    font-family: 'Droid Sans', sans-serif;
+    font-size: 40px;
+}
+
+h3{
+    color: #9b9b9b;
+    font-family: 'Open Sans', sans-serif;
+    margin-top: -20px;
+}
+
+h4{
+    color: #9b9b9b;
+    font-family: 'Open Sans', sans-serif;
+    margin-top: 80px;
+    text-align: center;
+}
+
 p{
+    color: #212121;
 	font-size: 5em;
 	height: 100px;
 }
@@ -17,10 +41,11 @@ button {
 	
     color: #fff;
     text-decoration: none;
-    background-color: #47B677;
+    background-color: #54BB81;
     border:none;
     cursor: pointer;
-    font-family: 'Helvetica';
+    font-family: 'Lato', sans-serif;
+    letter-spacing: 1px;
     font-weight: 700;
     font-size: 2em;
     display: block;
@@ -32,14 +57,19 @@ button {
     -moz-box-shadow:0px 9px 0px #2C9156;
     box-shadow: 0px 9px 0px #2C9156;
     margin: 0px auto;
-	width: 250px;
+	width: 220px;
+    padding:15px 0 15px 0;
 	text-align: center;
 	
-	-webkit-transition: all .1s ease;
-	-moz-transition: all .1s ease;
-	-ms-transition: all .1s ease;
-	-o-transition: all .1s ease;
-	transition: all .1s ease;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-ms-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+}
+
+button:hover{
+    background-color: #49A973;
 }
 
 button:active {
@@ -51,3 +81,15 @@ button:active {
 }
 
 button:focus {outline:0;}
+
+footer{
+    margin: 0 auto;
+    width: 50%;
+}
+
+#follow{
+    margin:0 auto;
+}
+
+a{color: #707070;}
+a:hover{color:#515151;}
